exports[`test renders loading with no devotion 1`] = `
<div className="locked-ends locked-sides floating">
<div className="floating__item">
<Loading />
</div>
</div>
`;

exports[`test renders with image 1`] = `
<div>
<Meta title={[undefined]} id={[undefined]} image="http://test.com/1x1.jpg" meta={{...}} />
<div title="Devotional">
<DevotionsSingleContent devotion={{...}} onClickLink={[Function]} classes={{...}} />
</div>
</div>
`;

exports[`test renders with scripture 1`] = `
<div>
<Meta title={[undefined]} id={[undefined]} image="http://test.com/1x1.jpg" meta={{...}} />
<div title="Devotional">
<DevotionsSingleContent devotion={{...}} onClickLink={[Function]} classes={{...}} />
</div>
</div>
`;

exports[`test renders without scripture or image 1`] = `
<div>
<Meta title={[undefined]} id="1" image={{...}} meta={{...}} />
<div title="Devotional">
<DevotionsSingleContent devotion={{...}} onClickLink={[Function]} classes={{...}} />
</div>
</div>
`;
